Промежуточный рефакторинг клиентов